# wapp

./: .gitignore  MANIFEST.in  README.md  db.sqlite3  endpoint_base.py  env.py  flask_db.py  flaskapp.py  manage.py  migrate.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  release-on-tag.yml
demo/: db_models.py  urls.py  wapp.py
demo/migrations/: 0001_initial.py
migrations/: env.py
migrations/versions/: 2021a9835403_initial_migration_with_foo_bar_thing_.py
nested/things/: wapp.py
nested/things/migrations/: 0001_initial.py
src/wapp/: migrate.py
wapp/: cli.py  core.py  db_models.py  generic_endpoints.py  migrate.py  wapp.py
wapp/cli_commands/: __init__.py  export.py  init.py
wapp/codegen/: codegen.py  generate_endpoints.py  generate_models.py  generate_types.py
wapp/core/: asgi.py
wapp/decorators/: endpoint_meta.py  model_meta.py  wapp.py
wapp/templates/: app.py  app_env.py  automigrate.py  create_app.py  env.py  example.py  migrate_app.py  settings.py  users_demo.py
wapp/tools/: export_openapi_ts.py
wappapi/: asgi.py  settings.py  urls.py  wsgi.py
