[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "saitech-wapp"
dynamic = ["version"]
description = "A modular Flask API framework with auto CRUD and migrations"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "saitech" }]
dependencies = ["alembic","python-dotenv","flask","sqlalchemy"]

[project.urls]
Homepage = "https://github.com/saitech-org/wapp"

[tool.setuptools.packages.find]
where = ["."]
include = ["wapp*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
